# reversi_Cplusplus

./: .gitignore  CMakeLists.txt  Makefile  Makefile-matching  Makefile-othello  PlayGame.cpp  README.md  gmon.out  matching.py  playgameonGUI.py  playgameonGUI.spec
bitboard/: _test_othello.py  bitboard.cpp  bitboard.h  c2js.cpp  c2python.cpp  othello.cpp  othello.h  othello.pyd
display/: gui.py  menu.py
matching/: __init__.py  elorating.cpp  elorating.h  elorating.txt  matching.cpp  matching.h  profile_90match.txt
strategy/: basestrategy.h  maximize.cpp  maximize.h  minimize.cpp  minimize.h  minmax.cpp  minmax.h  random.cpp  random.h  strategy.cpp  strategy.h
